# MSRChat

./: .env copy  .env.sample  app.py  appsvc.yaml  azure-pipelines.yml  build.sh  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  start.cmd
CustomScripts/: JsonParser.ipynb
CustomScripts/json/: blogs_rf3.json  filtered_projects.json  papers_rf3.json  projects_since_jan23 (1).json
analysis/chat_history/: .env.example  eval_prompt.py  history.py  history_analysis.ipynb  inference.py
backend/: conversationtelemetry.py  dynamicformdata.py
backend/auth/: sample_user.py
backend/notebooks/: ChatClientCheck.ipynb
backend/orchestrators/: AdvancedOrchestrator.py  DefaultOrchestrator.py  DynamicFormOrchestrator.py  IntentExtraction.py  Orchestrator.py  UpdatedOrchestrator.py
backend/tests/: script_test_dynamic_form_orchestrator.py  test_dynamic_form_orchestrator.py
evaluation/: .env.sample  README.md  functions.py  prompt.py  prompt_eval.ipynb  prompt_library.xlsx
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vite.config.ts.timestamp-1709571370992.mjs
frontend/src/: index.css  index.tsx
orchestrators/: BaseOrchestrator.py  DefaultOrchestrator.py  Orchestrator.py
scripts/: prepdocs.py
static/: index.html
static/assets/: index-01702efd.css  index-01aa45d9.js  index-02f55edd.js  index-0325db99.js  index-04872e64.js  index-0571ce46.js  index-0589850f.js  index-093f44cc.js  index-09865363.js  index-0cc713ab.js  index-0d36acde.js  index-1202c11d.js  index-12f9ca49.js  index-1b511975.js  index-1b65ac60.js  index-1bbb0b77.js  index-1fdaeee9.js  index-21c4f97f.js  (+89 more)
(+60 files in other folders)
